tests/backend/checkmach/fail2.output
File "fail2.ml", line 1, characters 5-15:
Error (warning 197 [check-failed]): Annotation check for zero_alloc strict failed on function Fail2.test (camlFail2__test_HIDE_STAMP)
